# sample-ml-repo

./: .gitignore  README.rst  pyproject.toml  readme.md
conf/base/: catalog.yml  parameters.yml
docs/: build_docs.sh
docs/source/: conf.py  index.rst
hooks/: pre-commit-hook.sh
samplemlproject/: run.py
samplemlproject/pipelines/: testpipeline.py
samplemlproject/scripts/: run_production.py
src/mltemplate/: __init__.py  context.py  hooks.py  pipeline.py  run.py  settings.py
src/mltemplate/models/: simplemodel.py
src/mltemplate/pipelines/: trainpipeline.py
tests/: test_mltemplate.py
