[tool.poetry]
name = "mltemplate"
version = "0.1.0"
description = ""
authors = ["philipp.wolters <philipp.wolters@codecentric.de>"]
include = ["./src/mltemplate"]

[tool.poetry.dependencies]
python = "~3.7.1"
python-dotenv = "^0.13.0"
kedro-viz = "^3.2.0"
dvc = "^0.93.0"
tensorflow-cpu = "^2.4.0"
tensorflow-estimator = "2.4.0"
pillow = "^7.1.1"
streamlit = ">0.58"
ccmlutils = { git = "https://github.com/Biber05/ccmlutils.git", branch = "develop" }
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
sphinx = "1.7, <2.0"
sphinx_rtd_theme = "0.4.1"
nbsphinx = "0.3.4"
nbstripout = "0.3.3"
recommonmark = "0.5.0"
sphinx-autodoc-typehints = "1.6.0"
sphinx_copybutton = "0.2.5"
jupyter_client = "^5.1.0, <7.0"
tornado = "~6.1"
ipykernel = "~5.3"

[tool.kedro]
package_name = "mltemplate"
project_name = "mltemplate"
project_version = "0.17.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/mltemplate -ra"""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# KEDRO

